@@ -1,10 +1,78 @@
 package ru.otus.hw03;
 
 
+import com.sun.management.GarbageCollectionNotificationInfo;
+
+import javax.management.NotificationEmitter;
+import javax.management.NotificationListener;
+import javax.management.openmbean.CompositeData;
+import java.io.IOException;
+import java.lang.management.GarbageCollectorMXBean;
+import java.lang.management.ManagementFactory;
+import java.util.List;
+
+/*
+
+-Xms128m
+-Xmx128m
+-Xlog:gc=debug:file=F:\Documents\java\log/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=F:\Documents\java\log/dump
+-XX:+UseSerialGC
+
+-Xms128m
+-Xmx128m
+-Xlog:gc=debug:file=F:\Documents\java\log/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=F:\Documents\java\log/dump
+-XX:+UseParallelGC
+
+-Xms128m
+-Xmx128m
+-Xlog:gc=debug:file=F:\Documents\java\log/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=F:\Documents\java\log/dump
+-XX:+UseConcMarkSweepGC
+
+
+-Xms128m
+-Xmx128m
+-Xlog:gc=debug:file=F:\Documents\java\log/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=F:\Documents\java\log/dump
+-XX:+UseG1GC
+
+ */
 public class Main {
 
-    public static void main(String[] args) {
-        System.out.println("Hello world");
+    public static void main(String[] args) throws IOException {
+        System.out.println("Starting pid: " + ManagementFactory.getRuntimeMXBean().getName());
+        switchOnMonitoring();
+        GarbageThread garbageThread = new GarbageThread("/test.txt");
+        garbageThread.start();
+    }
+
+
+    private static void switchOnMonitoring() {
+        List<GarbageCollectorMXBean> gcbeans = java.lang.management.ManagementFactory.getGarbageCollectorMXBeans();
+        for (GarbageCollectorMXBean gcbean : gcbeans) {
+            System.out.println("GC name:" + gcbean.getName());
+            NotificationEmitter emitter = (NotificationEmitter) gcbean;
+            NotificationListener listener = (notification, handback) -> {
+                if (notification.getType().equals(GarbageCollectionNotificationInfo.GARBAGE_COLLECTION_NOTIFICATION)) {
+                    GarbageCollectionNotificationInfo info = GarbageCollectionNotificationInfo.from((CompositeData) notification.getUserData());
+                    String gcName = info.getGcName();
+                    String gcAction = info.getGcAction();
+                    String gcCause = info.getGcCause();
+
+                    long startTime = info.getGcInfo().getStartTime();
+                    long duration = info.getGcInfo().getDuration();
+
+                    System.out.println("start:" + startTime + " Name:" + gcName + ", action:" + gcAction + ", gcCause:" + gcCause + "(" + duration + " ms)");
+                }
+            };
+            emitter.addNotificationListener(listener, null, null);
+        }
     }
 
 
